--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@ header {
   background-color: rgb(170, 209, 209);
 }
 .HeadContainer_1{
-  color:blueviolet;
+  color:rgb(47, 32, 189);
   
 }
 .HeadContainer_2{
-  font-size:20px;
+  font-size:25px;
   font-style: italic;
   color:blueviolet;
 }
@@ -31,7 +31,7 @@ nav {
   display:flex;
     flex-wrap:wrap;
     justify-content: space-evenly;
-    background-color: rgb(211, 211, 228);
+    background-color: rgb(184, 157, 209);
 }
 .company {
   border-radius: 20px;
@@ -103,15 +103,16 @@ th {
 }
 
 table {
-  width: 97%;
+  width: 100%;
   color:rgb(53, 0, 128);
-  margin:2em;
+  /* margin:.2em; */
   
 }
 
 table, th, td {
   border: 2px solid;
   font-size: 22px;
+  
 }
 
 table {
@@ -123,7 +124,7 @@ table {
 .sectionContainer2 {
   /* border: dashed rgb(194, 37, 13); */
   border-width: 4px;
-  height: 400px;
+  height: 450px;
   margin: 1em;
   float: left; 
   display: flex;
@@ -172,6 +173,10 @@ table {
  padding: 2px;
 }
 
+
+/* #textover{
+  color: rgb(214, 214, 233);
+} */
 
 #textover:hover{
     font-size:50px;
